change gitignore to guarantee data safe

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-*.json
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +126,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+account.json
